feat: Added Lasagna recipe

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,5 +7,69 @@
 	</head>
 	<body>
 		<h1>Lasagna</h1>
+		<img src="/images/lasagna.jpg" alt="Picture of lasagna" width="400" />
+		<h2>Description</h2>
+		<p>
+			This is my mom's special homemade lasagna recipe with a meaty,
+			made-from-scratch tomato sauce and a deliciously cheesy filling.
+		</p>
+		<h3>Ingredients</h3>
+		<ul>
+			<li>
+				<strong>Meat</strong>: This lasagna recipe starts with a pound
+				of ground meat (½ pound ground pork, ½ pound lean ground beef).
+			</li>
+			<li>
+				<strong>Onion</strong>: A diced onion is cooked until
+				translucent with the ground meat.
+			</li>
+			<li>
+				<strong>Canned tomatoes</strong>: You'll need a can of tomato
+				sauce and a can of crushed tomatoes.
+			</li>
+			<li>
+				<strong>Fresh herbs</strong>: For fresh flavor, chop two
+				tablespoons of parsley and crush one clove of garlic.
+			</li>
+			<li>
+				<strong>Cheese</strong>: The cheese layer is made up of cottage
+				cheese and Parmesan. You'll also need shredded mozzarella.
+			</li>
+			<li>
+				<strong>Noodles</strong>: Of course, you'll need lasagna
+				noodles! This recipe calls for uncooked noodles, but you can use
+				the oven-ready variety to save time.
+			</li>
+		</ul>
+		<h3>Steps</h3>
+		<ol>
+			<li>
+				Cook the meat: Cook the ground meat in a skillet until browned
+				and crumbly. Add the onion and continue cooking until it's
+				translucent. Stir in the canned tomato products, half of the
+				parsley, garlic, basil, 1.5 teaspoons of salt, oregano, and
+				sugar.
+			</li>
+			<li>
+				Cook the noodles: Boil the lasagna noodles in lightly salted
+				water until they're al dente.
+			</li>
+			<li>
+				Make the cheese layer: Mix cottage cheese, Parmesan cheese,
+				eggs, the remaining parsley, the remaining salt, and pepper in a
+				bowl.
+			</li>
+			<li>
+				Assemble the lasagna: Layer the ingredients according to the
+				recipe (starting with sauce and ending with mozzarella) until
+				the lasagna is assembled.
+			</li>
+			<li>
+				Bake the lasagna: Cover with foil and bake in the preheated oven
+				for about half an hour. Remove the foil and continue baking
+				until the top is golden brown.
+			</li>
+			<li>Enjoy.</li>
+		</ol>
 	</body>
 </html>
