--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 	</head>
 	<body>
 		<h1>Odin Recipes</h1>
+		<img
+			src="/images/italian.jpg"
+			width="400"
+			alt="italian flag with italian food aroung it"
+		/>
 		<ul>
 			<li><a href="/recipes/lasagna.html">Lasagna</a></li>
 			<li><a href="/recipes/pasta.html">Pasta</a></li>
